# ChangeLog for sys-apps/baselayout
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.478 2009/11/20 17:57:53 armin76 Exp $

# See the rc-scripts ChangeLog in subversion for release info:
# http://sources.gentoo.org/viewcvs.py/*checkout*/baselayout/trunk/ChangeLog

  20 Nov 2009; Raúl Porcel <armin76@gentoo.org> baselayout-1.12.13.ebuild:
  alpha/ia64/sparc stable wrt #290537

  17 Nov 2009; Brent Baude <ranger@gentoo.org> baselayout-1.12.13.ebuild:
  Marking baselayout-1.12.13 ppc64 for bug 290537

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> baselayout-1.12.13.ebuild:
  Stable for HPPA (bug #290537).

  04 Nov 2009; Markus Meier <maekke@gentoo.org> baselayout-1.12.13.ebuild:
  amd64/x86 stable, bug #290537

  01 Nov 2009; nixnut <nixnut@gentoo.org> baselayout-1.12.13.ebuild:
  ppc stable #290537

*baselayout-1.12.13 (11 Oct 2009)

  11 Oct 2009; Mike Frysinger <vapier@gentoo.org>
  +baselayout-1.12.13.ebuild:
  Version bump.

*baselayout-2.0.1 (24 May 2009)

  24 May 2009; Mike Frysinger <vapier@gentoo.org> +baselayout-2.0.1.ebuild:
  Rename modprobe files and fix some comments.

  02 Mar 2009; Benedikt Böhm <hollow@gentoo.org> baselayout-2.0.0.ebuild:
  fix /etc/shadow permissions when building stages

  19 Aug 2008; Zac Medico <zmedico@gentoo.org> baselayout-2.0.0.ebuild:
  Avoid potential warning messages in the SYMLINK_LIB code which may be
  triggered when find traverses a directory whose parent has already been
  merged from lib to lib64.

  19 Aug 2008; Zac Medico <zmedico@gentoo.org> baselayout-2.0.0.ebuild:
  Make the SYMLINK_LIB code in pkg_preinst merge files from lib directories
  to lib64 directories when necessary, instead of blindly wiping out the
  content of the lib dir. Thanks to Daniel Robbins for finding the cause of
  this issue, which he discovered when building stage1 with catalyst.
