@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/Attic/baselayout-2.0.1.ebuild,v 1.1 2009/05/24 19:47:02 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/Attic/baselayout-2.0.1.ebuild,v 1.2 2010/01/15 02:45:10 vapier Exp $
 
 inherit multilib
 
@@ -181,7 +181,7 @@ pkg_postinst() {
 
 	# Force shadow permissions to not be world-readable #260993
 	for x in shadow ; do
-		[ -e "${ROOT}etc/${x}" ] && chmod 0600 "${ROOT}etc/${x}"
+		[ -e "${ROOT}etc/${x}" ] && chmod o-rwx "${ROOT}etc/${x}"
 	done
 
 	# This is also written in src_install (so it's in CONTENTS), but
