@@ -1,9 +1,12 @@
 # ChangeLog for sys-apps/baselayout
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.478 2009/11/20 17:57:53 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.479 2010/01/15 02:45:10 vapier Exp $
 
 # See the rc-scripts ChangeLog in subversion for release info:
 # http://sources.gentoo.org/viewcvs.py/*checkout*/baselayout/trunk/ChangeLog
+
+  15 Jan 2010; Mike Frysinger <vapier@gentoo.org> baselayout-2.0.1.ebuild:
+  Only remove world bits from shadow #271974 by Nils Wisiol.
 
   20 Nov 2009; Raúl Porcel <armin76@gentoo.org> baselayout-1.12.13.ebuild:
   alpha/ia64/sparc stable wrt #290537
